o Updated to JOMC 1.0-beta-5-SNAPSHOT.
git-svn-id: http://svn.jomc.org/svnroot/jomc/jomc-standalone/trunk@2058 aee2edba-5628-49ba-b8b8-0e9d4ac63d57

--- a/jomc-standalone-model/pom.xml
+++ b/jomc-standalone-model/pom.xml
@@ -41,7 +41,7 @@
   <modelVersion>4.0.0</modelVersion>
   <artifactId>jomc-standalone-model</artifactId>
   <name>JOMC Standalone Model</name>
-  <description>Standalone environment model.</description>
+  <description>Object management and configuration standalone environment model.</description>
   <build>
     <resources>
       <resource>
