--- a/pom.xml
+++ b/pom.xml
@@ -546,6 +546,11 @@
       </dependency>
       <dependency>
         <groupId>org.jomc</groupId>
+        <artifactId>jomc-modlet</artifactId>
+        <version>${jomc.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.jomc</groupId>
         <artifactId>jomc-model</artifactId>
         <version>${jomc.version}</version>
       </dependency>
