o Added '-inferdepvis protected' to UMLGraph configuration.
git-svn-id: http://svn.jomc.org/svnroot/jomc/jomc-standalone/trunk@2120 aee2edba-5628-49ba-b8b8-0e9d4ac63d57

--- a/pom.xml
+++ b/pom.xml
@@ -238,7 +238,7 @@
             </docletArtifact>
             <additionalparam>
               -inferrel -inferdep -hide java.* -collpackages java.util.* -qualify -postfixpackage -nodefontsize 10
-              -nodefontpackagesize 8 -outputencoding ${project.reporting.outputEncoding}
+              -nodefontpackagesize 8 -outputencoding ${project.reporting.outputEncoding} -inferdepvis protected
             </additionalparam>
             <archive>
               <index>true</index>
@@ -743,7 +743,7 @@
               </docletArtifact>
               <additionalparam>
                 -inferrel -inferdep -hide java.* -collpackages java.util.* -qualify -postfixpackage -nodefontsize 10
-                -nodefontpackagesize 8 -outputencoding ${project.reporting.outputEncoding}
+                -nodefontpackagesize 8 -outputencoding ${project.reporting.outputEncoding} -inferdepvis protected
               </additionalparam>
             </configuration>
           </reportSet>
