o Split parent changes document to a single document per artifact. o Updated artifact URLs. o Updated artifact site distribution URLs.
git-svn-id: http://svn.jomc.org/svnroot/jomc/jomc-standalone/trunk@2581 aee2edba-5628-49ba-b8b8-0e9d4ac63d57

--- a/jomc-standalone-ri/pom.xml
+++ b/jomc-standalone-ri/pom.xml
@@ -43,6 +43,7 @@
   <packaging>jar</packaging>
   <name>JOMC Standalone RI</name>
   <description>Object management and configuration standalone environment reference implementation.</description>
+  <url>${jomc.artifacts.url}/${project.artifacId}-${project.version}</url>
   <build>
     <resources>
       <resource>
@@ -56,12 +57,6 @@
         <directory>src/test/resources</directory>
       </testResource>
     </testResources>
-    <plugins>
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>build-helper-maven-plugin</artifactId>
-      </plugin>
-    </plugins>
   </build>
   <dependencies>
     <dependency>
@@ -212,6 +207,13 @@
       </exclusions>
     </dependency>
   </dependencies>
+  <distributionManagement>
+    <site>
+      <id>jomc.sourceforge.net</id>
+      <name>JOMC Site</name>
+      <url>${jomc.artifacts.distribution.url}/${project.artifacId}-${project.version}</url>
+    </site>
+  </distributionManagement>
   <profiles>
     <profile>
       <id>jdk15</id>
