--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
   <packaging>pom</packaging>
   <name>JOMC Standalone</name>
   <description>JOMC Standalone is an object management and configuration standalone environment. This is the parent module of the JOMC Standalone artifacts.</description>
-  <url>http://jomc.sourceforge.net/jomc-standalone/${jomc.site.version}</url>
+  <url>${jomc.artifacts.url}</url>
   <inceptionYear>2005</inceptionYear>
   <organization>
     <name>The JOMC Project</name>
@@ -98,7 +98,7 @@
       <extension>
         <groupId>org.jomc.build</groupId>
         <artifactId>jomc-build-resources</artifactId>
-        <version>${jomc-build.version}</version>
+        <version>${jomc.build.version}</version>
       </extension>
     </extensions>
     <pluginManagement>
@@ -119,6 +119,9 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-site-plugin</artifactId>
           <version>2.1.1</version>
+          <configuration>
+            <validate>true</validate>
+          </configuration>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -130,26 +133,6 @@
             </delimiters>
             <useDefaultDelimiters>false</useDefaultDelimiters>
           </configuration>
-        </plugin>
-        <plugin>
-          <groupId>org.codehaus.mojo</groupId>
-          <artifactId>buildnumber-maven-plugin</artifactId>
-          <version>1.0-beta-4</version>
-          <executions>
-            <execution>
-              <id>create-buildnumber</id>
-              <phase>validate</phase>
-              <goals>
-                <goal>create</goal>
-              </goals>
-              <configuration>
-                <format>{0,date,yyyy-MM-dd'T'HH:mm:ssZ}</format>
-                <items>
-                  <item>timestamp</item>
-                </items>
-              </configuration>
-            </execution>
-          </executions>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -209,7 +192,7 @@
             <forkMode>once</forkMode>
             <redirectTestOutputToFile>true</redirectTestOutputToFile>
             <systemPropertyVariables>
-              <org.jomc.model.ModelContext.defaultLogLevel>ALL</org.jomc.model.ModelContext.defaultLogLevel>
+              <org.jomc.modlet.ModelContext.defaultLogLevel>ALL</org.jomc.modlet.ModelContext.defaultLogLevel>
               <org.jomc.ri.DefaultObjectManager.defaultLogLevel>ALL</org.jomc.ri.DefaultObjectManager.defaultLogLevel>
               <java.util.logging.config.file>${project.build.testOutputDirectory}/logging.properties</java.util.logging.config.file>
             </systemPropertyVariables>
@@ -262,31 +245,9 @@
           <version>2.5</version>
         </plugin>
         <plugin>
-          <groupId>org.jomc</groupId>
-          <artifactId>maven-jomc-plugin</artifactId>
-          <version>${jomc.version}</version>
-          <executions>
-            <execution>
-              <id>main-default</id>
-              <goals>
-                <goal>attach-main-module</goal>
-                <goal>manage-main-sources</goal>
-                <goal>commit-main-classes</goal>
-                <goal>validate-main-classes</goal>
-                <goal>validate-main-model</goal>
-              </goals>
-            </execution>
-            <execution>
-              <id>test-default</id>
-              <goals>
-                <goal>attach-test-module</goal>
-                <goal>manage-test-sources</goal>
-                <goal>commit-test-classes</goal>
-                <goal>validate-test-classes</goal>
-                <goal>validate-test-model</goal>
-              </goals>
-            </execution>
-          </executions>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-changes-plugin</artifactId>
+          <version>2.2</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -315,6 +276,41 @@
           </configuration>
         </plugin>
         <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-scm-plugin</artifactId>
+          <version>1.3</version>
+          <configuration>
+            <message>[maven-scm-plugin] Build ${buildNumber}</message>
+            <username>${jomc.scm.username}</username>
+            <password>${jomc.scm.password}</password>
+          </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-dependency-plugin</artifactId>
+          <version>2.1</version>
+        </plugin>
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>buildnumber-maven-plugin</artifactId>
+          <version>1.0-beta-4</version>
+          <executions>
+            <execution>
+              <id>create-buildnumber</id>
+              <phase>validate</phase>
+              <goals>
+                <goal>create</goal>
+              </goals>
+              <configuration>
+                <format>{0,date,yyyy-MM-dd'T'HH:mm:ssZ}</format>
+                <items>
+                  <item>timestamp</item>
+                </items>
+              </configuration>
+            </execution>
+          </executions>
+        </plugin>
+        <plugin>
           <groupId>org.codehaus.mojo</groupId>
           <artifactId>build-helper-maven-plugin</artifactId>
           <version>1.5</version>
@@ -327,24 +323,9 @@
           </executions>
         </plugin>
         <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-scm-plugin</artifactId>
-          <version>1.3</version>
-          <configuration>
-            <message>[maven-scm-plugin] Build ${buildNumber}</message>
-            <username>${jomc.scm.username}</username>
-            <password>${jomc.scm.password}</password>
-          </configuration>
-        </plugin>
-        <plugin>
           <groupId>org.codehaus.mojo</groupId>
           <artifactId>xml-maven-plugin</artifactId>
           <version>1.0-beta-3</version>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-dependency-plugin</artifactId>
-          <version>2.1</version>
         </plugin>
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
@@ -376,16 +357,73 @@
             </execution>
           </executions>
         </plugin>
+        <plugin>
+          <groupId>org.jomc</groupId>
+          <artifactId>maven-jomc-plugin</artifactId>
+          <version>${jomc.version}</version>
+          <executions>
+            <execution>
+              <id>main-default</id>
+              <goals>
+                <goal>attach-main-module</goal>
+                <goal>manage-main-sources</goal>
+                <goal>commit-main-classes</goal>
+                <goal>validate-main-classes</goal>
+                <goal>validate-main-model</goal>
+              </goals>
+            </execution>
+            <execution>
+              <id>test-default</id>
+              <goals>
+                <goal>attach-test-module</goal>
+                <goal>manage-test-sources</goal>
+                <goal>commit-test-classes</goal>
+                <goal>validate-test-classes</goal>
+                <goal>validate-test-model</goal>
+              </goals>
+            </execution>
+          </executions>
+        </plugin>
       </plugins>
     </pluginManagement>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-dependency-plugin</artifactId>
-        <inherited>false</inherited>
+        <artifactId>maven-changes-plugin</artifactId>
         <executions>
           <execution>
-            <id>unpack</id>
+            <id>validate-changes</id>
+            <phase>initialize</phase>
+            <goals>
+              <goal>changes-validate</goal>
+            </goals>
+            <configuration>
+              <failOnError>true</failOnError>
+              <xmlPath>src/main/changes/changes.xml</xmlPath>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-dependency-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>copy-changes</id>
+            <phase>generate-resources</phase>
+            <goals>
+              <goal>copy-dependencies</goal>
+            </goals>
+            <configuration>
+              <classifier>changes</classifier>
+              <failOnMissingClassifierArtifact>false</failOnMissingClassifierArtifact>
+              <includeGroupIds>org.jomc,org.jomc.logging,org.jomc.standalone</includeGroupIds>
+              <outputDirectory>${project.build.directory}/jomc-changes</outputDirectory>
+              <type>xhtml</type>
+            </configuration>
+          </execution>
+          <execution>
+            <id>unpack-build-resources</id>
             <phase>generate-resources</phase>
             <goals>
               <goal>unpack</goal>
@@ -395,7 +433,7 @@
                 <artifactItem>
                   <groupId>org.jomc.build</groupId>
                   <artifactId>jomc-build-resources</artifactId>
-                  <version>${jomc-build.version}</version>
+                  <version>${jomc.build.version}</version>
                   <outputDirectory>${project.build.directory}/jomc-build-resources</outputDirectory>
                 </artifactItem>
               </artifactItems>
@@ -406,10 +444,9 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>xml-maven-plugin</artifactId>
-        <inherited>false</inherited>
         <executions>
           <execution>
-            <id>transform</id>
+            <id>transform-changes</id>
             <phase>generate-resources</phase>
             <goals>
               <goal>transform</goal>
@@ -445,18 +482,9 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>build-helper-maven-plugin</artifactId>
-        <!--
-
-        Selectively inheriting executions not working. See http://jira.codehaus.org/browse/MNG-3959
-        Workaround: inherited="false" in this pom and a copy of the plugin in all child poms to stop maven from
-                    executing the "attach" execution in the child poms.
-
-        -->
-        <inherited>false</inherited>
         <executions>
           <execution>
-            <id>attach</id>
-            <inherited>false</inherited> <!-- Ignored. MNG-3959 -->
+            <id>attach-changes</id>
             <goals>
               <goal>attach-artifact</goal>
             </goals>
@@ -497,7 +525,7 @@
             </goals>
             <configuration>
               <resourceBundles>
-                <resourceBundle>org.jomc.build:jomc-build-resources:${jomc-build.version}</resourceBundle>
+                <resourceBundle>org.jomc.build:jomc-build-resources:${jomc.build.version}</resourceBundle>
               </resourceBundles>
               <properties>
                 <buildNumber>${buildNumber}</buildNumber>
@@ -612,7 +640,7 @@
       <dependency>
         <groupId>javax.xml.bind</groupId>
         <artifactId>jaxb-api</artifactId>
-        <version>2.2</version>
+        <version>2.2.1</version>
       </dependency>
       <dependency>
         <groupId>javax.xml.stream</groupId>
@@ -627,7 +655,7 @@
       <dependency>
         <groupId>com.sun.xml.bind</groupId>
         <artifactId>jaxb-impl</artifactId>
-        <version>2.2</version>
+        <version>2.2.1.1</version>
       </dependency>
 
       <!-- Misc -->
@@ -699,7 +727,7 @@
     <site>
       <id>jomc.sourceforge.net</id>
       <name>JOMC Site</name>
-      <url>scp://shell.sourceforge.net/home/groups/j/jo/jomc/htdocs/jomc-standalone/${jomc.site.version}</url>
+      <url>${jomc.artifacts.distribution.url}</url>
     </site>
   </distributionManagement>
   <reporting>
@@ -959,8 +987,10 @@
     <xjcOutputDirectory>${project.build.directory}/generated-sources/jaxb</xjcOutputDirectory>
     <remoteResourcesOutputDirectory>${project.build.directory}/maven-shared-archive-resources</remoteResourcesOutputDirectory>
     <jomc.version>1.0</jomc.version>
-    <jomc-build.version>1.4</jomc-build.version>
-    <jomc.site.version>1.0.x</jomc.site.version>
+    <jomc.build.version>1.5</jomc.build.version>
+    <jomc.base.version>1.0</jomc.base.version>
+    <jomc.artifacts.url>http://jomc.sourceforge.net/jomc-standalone/${jomc.base.version}</jomc.artifacts.url>
+    <jomc.artifacts.distribution.url>scp://shell.sourceforge.net/home/groups/j/jo/jomc/htdocs/jomc-standalone/${jomc.base.version}</jomc.artifacts.distribution.url>
     <surefire.version>2.5</surefire.version>
     <emma-maven-plugin.version>1.0-alpha-2</emma-maven-plugin.version>
     <invoker.specification.version>1.0</invoker.specification.version>
