--- a/jomc-standalone-model/pom.xml
+++ b/jomc-standalone-model/pom.xml
@@ -42,6 +42,7 @@
   <artifactId>jomc-standalone-model</artifactId>
   <name>JOMC Standalone Model</name>
   <description>Object management and configuration standalone environment model.</description>
+  <url>${jomc.artifacts.url}/${project.artifacId}-${project.version}</url>
   <build>
     <resources>
       <resource>
@@ -64,10 +65,6 @@
       </testResource>
     </testResources>
     <plugins>
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>build-helper-maven-plugin</artifactId>
-      </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-resources-plugin</artifactId>
@@ -177,6 +174,13 @@
       </plugin>
     </plugins>
   </reporting>
+  <distributionManagement>
+    <site>
+      <id>jomc.sourceforge.net</id>
+      <name>JOMC Site</name>
+      <url>${jomc.artifacts.distribution.url}/${project.artifacId}-${project.version}</url>
+    </site>
+  </distributionManagement>
   <profiles>
     <profile>
       <id>jdk15</id>
