o Updated 'Modules' menu. o Added 'animal-sniffer-maven-plugin'.
git-svn-id: http://svn.jomc.org/svnroot/jomc/jomc-standalone/trunk@2662 aee2edba-5628-49ba-b8b8-0e9d4ac63d57

--- a/jomc-standalone-model/pom.xml
+++ b/jomc-standalone-model/pom.xml
@@ -42,7 +42,7 @@
   <artifactId>jomc-standalone-model</artifactId>
   <name>JOMC Standalone Model</name>
   <description>Object management and configuration standalone environment model.</description>
-  <url>${jomc.artifacts.url}/${project.artifacId}-${project.version}</url>
+  <url>${jomc.artifacts.url}/${project.artifactId}-${project.version}</url>
   <build>
     <resources>
       <resource>
