--- a/pom.xml
+++ b/pom.xml
@@ -210,8 +210,28 @@
             <serialwarn>true</serialwarn>
             <source>1.5</source>
             <doctitle>${project.name} ${project.version}</doctitle>
+            <testDoctitle>${project.name} Tests ${project.version}</testDoctitle>
             <windowtitle>${project.name} ${project.version}</windowtitle>
+            <testWindowtitle>${project.name} Tests ${project.version}</testWindowtitle>
             <detectJavaApiLink>true</detectJavaApiLink>
+            <javaApiLinks>
+              <property>
+                <name>api_1.3</name>
+                <value>http://download.oracle.com/javase/1.3/docs/api/</value>
+              </property>
+              <property>
+                <name>api_1.4</name>
+                <value>http://download.oracle.com/javase/1.4.2/docs/api/</value>
+              </property>
+              <property>
+                <name>api_1.5</name>
+                <value>http://download.oracle.com/javase/1.5.0/docs/api/</value>
+              </property>
+              <property>
+                <name>api_1.6</name>
+                <value>http://download.oracle.com/javase/6/docs/api/</value>
+              </property>
+            </javaApiLinks>
             <detectOfflineLinks>false</detectOfflineLinks>
             <!-- detectLinks>true</detectLinks See http://jira.codehaus.org/browse/MJAVADOC-283 -->
             <doclet>org.umlgraph.doclet.UmlGraphDoc</doclet>
@@ -253,7 +273,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-assembly-plugin</artifactId>
-          <version>2.2-beta-5</version>
+          <version>2.2</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -290,6 +310,27 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-dependency-plugin</artifactId>
           <version>2.1</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-enforcer-plugin</artifactId>
+          <version>1.0</version>
+          <executions>
+            <execution>
+              <id>enforce-maven</id>
+              <goals>
+                <goal>enforce</goal>
+              </goals>
+              <configuration>
+                <rules>
+                  <requireMavenVersion>
+                    <message>This project requires a 2.2.x Maven version.</message>
+                    <version>[2.2,2.3)</version>
+                  </requireMavenVersion>
+                </rules>
+              </configuration>
+            </execution>
+          </executions>
         </plugin>
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
@@ -409,6 +450,10 @@
       </plugins>
     </pluginManagement>
     <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-enforcer-plugin</artifactId>
+      </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-changes-plugin</artifactId>
@@ -666,7 +711,7 @@
       <dependency>
         <groupId>javax.xml.bind</groupId>
         <artifactId>jaxb-api</artifactId>
-        <version>2.2.1</version>
+        <version>2.2.2</version>
       </dependency>
       <dependency>
         <groupId>javax.xml.stream</groupId>
@@ -681,7 +726,7 @@
       <dependency>
         <groupId>com.sun.xml.bind</groupId>
         <artifactId>jaxb-impl</artifactId>
-        <version>2.2.1.1</version>
+        <version>2.2.2</version>
       </dependency>
 
       <!-- Misc -->
@@ -706,7 +751,7 @@
       <dependency>
         <groupId>commons-lang</groupId>
         <artifactId>commons-lang</artifactId>
-        <version>2.5</version>
+        <version>2.6</version>
       </dependency>
       <dependency>
         <groupId>commons-collections</groupId>
@@ -783,8 +828,28 @@
               <serialwarn>true</serialwarn>
               <source>1.5</source>
               <doctitle>${project.name} ${project.version}</doctitle>
+              <testDoctitle>${project.name} ${project.version}</testDoctitle>
               <windowtitle>${project.name} ${project.version}</windowtitle>
+              <testWindowtitle>${project.name} ${project.version}</testWindowtitle>
               <detectJavaApiLink>true</detectJavaApiLink>
+              <javaApiLinks>
+                <property>
+                  <name>api_1.3</name>
+                  <value>http://download.oracle.com/javase/1.3/docs/api/</value>
+                </property>
+                <property>
+                  <name>api_1.4</name>
+                  <value>http://download.oracle.com/javase/1.4.2/docs/api/</value>
+                </property>
+                <property>
+                  <name>api_1.5</name>
+                  <value>http://download.oracle.com/javase/1.5.0/docs/api/</value>
+                </property>
+                <property>
+                  <name>api_1.6</name>
+                  <value>http://download.oracle.com/javase/6/docs/api/</value>
+                </property>
+              </javaApiLinks>
               <detectOfflineLinks>false</detectOfflineLinks>
               <!-- detectLinks>true</detectLinks See http://jira.codehaus.org/browse/MJAVADOC-283 -->
               <doclet>org.umlgraph.doclet.UmlGraphDoc</doclet>
@@ -1013,12 +1078,12 @@
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <xjcOutputDirectory>${project.build.directory}/generated-sources/jaxb</xjcOutputDirectory>
     <remoteResourcesOutputDirectory>${project.build.directory}/maven-shared-archive-resources</remoteResourcesOutputDirectory>
-    <jomc.version>1.1</jomc.version>
+    <jomc.version>1.2-SNAPSHOT</jomc.version>
     <jomc.build.version>1.5</jomc.build.version>
     <jomc.base.version>1.0</jomc.base.version>
     <jomc.artifacts.url>http://jomc.sourceforge.net/jomc-standalone/${jomc.base.version}</jomc.artifacts.url>
     <jomc.artifacts.distribution.url>scp://shell.sourceforge.net/home/groups/j/jo/jomc/htdocs/jomc-standalone/${jomc.base.version}</jomc.artifacts.distribution.url>
-    <surefire.version>2.6</surefire.version>
+    <surefire.version>2.7.1</surefire.version>
     <emma-maven-plugin.version>1.0-alpha-2</emma-maven-plugin.version>
     <invoker.specification.version>1.0</invoker.specification.version>
   </properties>
