--- a/pom.xml
+++ b/pom.xml
@@ -268,7 +268,10 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-changes-plugin</artifactId>
-          <version>2.2</version>
+          <version>${maven-changes-plugin.version}</version>
+          <configuration>
+            <escapeHTML>false</escapeHTML>
+          </configuration>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -465,6 +468,7 @@
               <goal>changes-validate</goal>
             </goals>
             <configuration>
+              <escapeHTML>false</escapeHTML>
               <failOnError>true</failOnError>
               <xmlPath>src/main/changes/changes.xml</xmlPath>
             </configuration>
@@ -895,15 +899,14 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-changes-plugin</artifactId>
-        <version>2.2</version>
-        <!-- version>2.3</version Upgrade breaks changes report due to http://jira.codehaus.org/browse/MCHANGES-190 -->
-        <inherited>false</inherited>
+        <version>${maven-changes-plugin.version}</version>
         <reportSets>
           <reportSet>
             <reports>
               <report>changes-report</report>
             </reports>
             <configuration>
+              <escapeHTML>false</escapeHTML>
               <issueLinkTemplatePerSystem>
                 <MantisBT>http://apps.sourceforge.net/mantisbt/jomc/view.php?id=%ISSUE%</MantisBT>
               </issueLinkTemplatePerSystem>
@@ -1086,5 +1089,6 @@
     <surefire.version>2.7.2</surefire.version>
     <emma-maven-plugin.version>1.0-alpha-2</emma-maven-plugin.version>
     <invoker.specification.version>1.0</invoker.specification.version>
+    <maven-changes-plugin.version>2.4</maven-changes-plugin.version>
   </properties>
 </project>
