o Added the 'maven-jaxb21-plugin' replacing the 'jaxb2-maven-plugin'.
git-svn-id: http://svn.jomc.org/svnroot/jomc/jomc-standalone/trunk@3071 aee2edba-5628-49ba-b8b8-0e9d4ac63d57

--- a/jomc-standalone-model/pom.xml
+++ b/jomc-standalone-model/pom.xml
@@ -120,8 +120,8 @@
         </executions>
       </plugin>
       <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>jaxb2-maven-plugin</artifactId>
+        <groupId>org.jvnet.jaxb2.maven2</groupId>
+        <artifactId>maven-jaxb21-plugin</artifactId>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
