--- a/pom.xml
+++ b/pom.xml
@@ -379,16 +379,28 @@
           <version>1.6</version>
           <executions>
             <execution>
-              <id>check-jdk15-compat</id>
+              <id>check</id>
               <phase>verify</phase>
               <goals>
                 <goal>check</goal>
               </goals>
               <configuration>
+                <ignoreDependencies>false</ignoreDependencies>
+                <ignores>
+                  <ignore>com.arjuna*</ignore>
+                  <ignore>javax.persistence*</ignore>
+                  <ignore>javax.transaction*</ignore>
+                  <ignore>oracle.toplink*</ignore>
+                  <ignore>org.apache*</ignore>
+                  <ignore>org.hibernate*</ignore>
+                  <ignore>org.enhydra*</ignore>
+                  <ignore>org.jomc*</ignore>
+                  <ignore>org.objectweb*</ignore>
+                </ignores>
                 <signature>
-                  <groupId>org.codehaus.mojo.signature</groupId>
-                  <artifactId>java15</artifactId>
-                  <version>1.0</version>
+                  <groupId>org.jomc.build</groupId>
+                  <artifactId>jdk15-jaxb21-signature</artifactId>
+                  <version>${jomc.build.version}</version>
                 </signature>
               </configuration>
             </execution>
@@ -1086,7 +1098,7 @@
     <xjcOutputDirectory>${project.build.directory}/generated-sources/jaxb</xjcOutputDirectory>
     <remoteResourcesOutputDirectory>${project.build.directory}/maven-shared-archive-resources</remoteResourcesOutputDirectory>
     <jomc.version>1.2-SNAPSHOT</jomc.version>
-    <jomc.build.version>1.5</jomc.build.version>
+    <jomc.build.version>1.6-SNAPSHOT</jomc.build.version>
     <jomc.base.version>1.0</jomc.base.version>
     <jomc.artifacts.url>http://jomc.sourceforge.net/jomc-standalone/${jomc.base.version}</jomc.artifacts.url>
     <jomc.artifacts.distribution.url>scp://shell.sourceforge.net/home/groups/j/jo/jomc/htdocs/jomc-standalone/${jomc.base.version}</jomc.artifacts.distribution.url>
