o Corrected 'distributionManagement' URL.
git-svn-id: http://svn.jomc.org/svnroot/jomc/jomc-standalone/trunk@3112 aee2edba-5628-49ba-b8b8-0e9d4ac63d57

--- a/jomc-standalone-ri/pom.xml
+++ b/jomc-standalone-ri/pom.xml
@@ -211,7 +211,7 @@
     <site>
       <id>jomc.sourceforge.net</id>
       <name>JOMC Site</name>
-      <url>${jomc.artifacts.distribution.url}/${project.artifacId}-${project.version}</url>
+      <url>${jomc.artifacts.distribution.url}/${project.artifactId}-${project.version}</url>
     </site>
   </distributionManagement>
   <profiles>
