--- a/pom.xml
+++ b/pom.xml
@@ -1098,7 +1098,7 @@
     <xjcOutputDirectory>${project.build.directory}/generated-sources/jaxb</xjcOutputDirectory>
     <remoteResourcesOutputDirectory>${project.build.directory}/maven-shared-archive-resources</remoteResourcesOutputDirectory>
     <jomc.version>1.2-SNAPSHOT</jomc.version>
-    <jomc.build.version>1.6-SNAPSHOT</jomc.build.version>
+    <jomc.build.version>1.6</jomc.build.version>
     <jomc.base.version>1.0</jomc.base.version>
     <jomc.artifacts.url>http://jomc.sourceforge.net/jomc-standalone/${jomc.base.version}</jomc.artifacts.url>
     <jomc.artifacts.distribution.url>scp://shell.sourceforge.net/home/groups/j/jo/jomc/htdocs/jomc-standalone/${jomc.base.version}</jomc.artifacts.distribution.url>
