o Updated 'issueManagement' to 'Trac' in favour of 'MantisBT'. o Updated SCM URL to 'Trac' in favour of 'ViewVC'.
git-svn-id: http://svn.jomc.org/svnroot/jomc/jomc-standalone/trunk@3185 aee2edba-5628-49ba-b8b8-0e9d4ac63d57

--- a/pom.xml
+++ b/pom.xml
@@ -63,8 +63,8 @@
     </developer>
   </developers>
   <issueManagement>
-    <system>MantisBT</system>
-    <url>http://sourceforge.net/apps/mantisbt/jomc/</url>
+    <system>Trac</system>
+    <url>http://sourceforge.net/apps/trac/jomc</url>
   </issueManagement>
   <mailingLists>
     <mailingList>
@@ -92,7 +92,7 @@
   <scm>
     <connection>scm:svn:https://jomc.svn.sourceforge.net/svnroot/jomc/jomc-standalone/trunk</connection>
     <developerConnection>scm:svn:https://jomc.svn.sourceforge.net/svnroot/jomc/jomc-standalone/trunk</developerConnection>
-    <url>http://jomc.svn.sourceforge.net/viewvc/jomc/jomc-standalone/trunk/</url>
+    <url>http://sourceforge.net/apps/trac/jomc/browser/jomc-standalone/trunk</url>
   </scm>
   <build>
     <extensions>
@@ -924,7 +924,8 @@
             <configuration>
               <escapeHTML>false</escapeHTML>
               <issueLinkTemplatePerSystem>
-                <MantisBT>http://apps.sourceforge.net/mantisbt/jomc/view.php?id=%ISSUE%</MantisBT>
+                <MantisBT>http://sourceforge.net/apps/mantisbt/jomc/view.php?id=%ISSUE%</MantisBT>
+                <Trac>http://sourceforge.net/apps/trac/jomc/ticket/%ISSUE%</Trac>
               </issueLinkTemplatePerSystem>
               <xmlPath>src/main/changes/changes.xml</xmlPath>
             </configuration>
