o Updated SCM URL to use redirecting links.
git-svn-id: http://svn.jomc.org/svnroot/jomc/jomc-standalone/trunk@3187 aee2edba-5628-49ba-b8b8-0e9d4ac63d57

--- a/pom.xml
+++ b/pom.xml
@@ -92,7 +92,7 @@
   <scm>
     <connection>scm:svn:https://jomc.svn.sourceforge.net/svnroot/jomc/jomc-standalone/trunk</connection>
     <developerConnection>scm:svn:https://jomc.svn.sourceforge.net/svnroot/jomc/jomc-standalone/trunk</developerConnection>
-    <url>http://sourceforge.net/apps/trac/jomc/browser/jomc-standalone/trunk</url>
+    <url>http://jomc.sourceforge.net/project/sources?jomc-standalone/trunk</url>
   </scm>
   <build>
     <extensions>
