o Updated 'maven-release-plugin' configuration setting parameters 'remoteTagging' to 'false' and 'suppressCommitBeforeTag' to 'true'.
git-svn-id: http://svn.jomc.org/svnroot/jomc/jomc-standalone/trunk@3189 aee2edba-5628-49ba-b8b8-0e9d4ac63d57

--- a/pom.xml
+++ b/pom.xml
@@ -143,9 +143,10 @@
             <username>${jomc.scm.username}</username>
             <password>${jomc.scm.password}</password>
             <preparationGoals>clean install</preparationGoals>
-            <tagBase>https://jomc.svn.sourceforge.net/svnroot/jomc/jomc-standalone/tags</tagBase>
             <useReleaseProfile>false</useReleaseProfile>
             <releaseProfiles>jomc-release</releaseProfiles>
+            <remoteTagging>false</remoteTagging>
+            <suppressCommitBeforeTag>true</suppressCommitBeforeTag>
           </configuration>
         </plugin>
         <plugin>
