--- a/pom.xml
+++ b/pom.xml
@@ -340,7 +340,7 @@
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
           <artifactId>buildnumber-maven-plugin</artifactId>
-          <version>1.0-beta-4</version>
+          <version>1.0</version>
           <executions>
             <execution>
               <id>create-buildnumber</id>
