--- a/pom.xml
+++ b/pom.xml
@@ -203,7 +203,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-javadoc-plugin</artifactId>
-          <version>2.7</version>
+          <version>2.8</version>
           <configuration>
             <bottom><![CDATA[<table border="0" width="100%"><tr><td align="left">Copyright &#169; {inceptionYear}-{currentYear} {organizationName}. All Rights Reserved.</td><td align="right"><a href="http://sourceforge.net/projects/jomc"><img src="http://sflogo.sourceforge.net/sflogo.php?group_id=257507&type=10" width="80" height="15" border="0" alt="Get JOMC at SourceForge.net. Fast, secure and Free Open Source software downloads"/></a></td></tr></table>]]></bottom>
             <breakiterator>true</breakiterator>
@@ -215,27 +215,9 @@
             <testDoctitle>${project.name} Tests ${project.version}</testDoctitle>
             <windowtitle>${project.name} ${project.version}</windowtitle>
             <testWindowtitle>${project.name} Tests ${project.version}</testWindowtitle>
-            <detectJavaApiLink>true</detectJavaApiLink>
-            <javaApiLinks>
-              <property>
-                <name>api_1.3</name>
-                <value>http://download.oracle.com/javase/1.3/docs/api/</value>
-              </property>
-              <property>
-                <name>api_1.4</name>
-                <value>http://download.oracle.com/javase/1.4.2/docs/api/</value>
-              </property>
-              <property>
-                <name>api_1.5</name>
-                <value>http://download.oracle.com/javase/1.5.0/docs/api/</value>
-              </property>
-              <property>
-                <name>api_1.6</name>
-                <value>http://download.oracle.com/javase/6/docs/api/</value>
-              </property>
-            </javaApiLinks>
             <detectOfflineLinks>false</detectOfflineLinks>
-            <!-- detectLinks>true</detectLinks See http://jira.codehaus.org/browse/MJAVADOC-283 -->
+            <detectLinks>true</detectLinks>
+            <validateLinks>true</validateLinks>
             <doclet>org.umlgraph.doclet.UmlGraphDoc</doclet>
             <docletArtifact>
               <groupId>org.umlgraph</groupId>
@@ -837,7 +819,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
-        <version>2.7</version>
+        <version>2.8</version>
         <reportSets>
           <reportSet>
             <id>javadoc</id>
@@ -857,27 +839,9 @@
               <testDoctitle>${project.name} ${project.version}</testDoctitle>
               <windowtitle>${project.name} ${project.version}</windowtitle>
               <testWindowtitle>${project.name} ${project.version}</testWindowtitle>
-              <detectJavaApiLink>true</detectJavaApiLink>
-              <javaApiLinks>
-                <property>
-                  <name>api_1.3</name>
-                  <value>http://download.oracle.com/javase/1.3/docs/api/</value>
-                </property>
-                <property>
-                  <name>api_1.4</name>
-                  <value>http://download.oracle.com/javase/1.4.2/docs/api/</value>
-                </property>
-                <property>
-                  <name>api_1.5</name>
-                  <value>http://download.oracle.com/javase/1.5.0/docs/api/</value>
-                </property>
-                <property>
-                  <name>api_1.6</name>
-                  <value>http://download.oracle.com/javase/6/docs/api/</value>
-                </property>
-              </javaApiLinks>
               <detectOfflineLinks>false</detectOfflineLinks>
-              <!-- detectLinks>true</detectLinks See http://jira.codehaus.org/browse/MJAVADOC-283 -->
+              <detectLinks>true</detectLinks>
+              <validateLinks>true</validateLinks>
               <doclet>org.umlgraph.doclet.UmlGraphDoc</doclet>
               <docletArtifact>
                 <groupId>org.umlgraph</groupId>
