--- a/jomc-standalone-model/pom.xml
+++ b/jomc-standalone-model/pom.xml
@@ -140,6 +140,26 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>wagon-maven-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>sourceforge-upload</id>
+            <phase>site-deploy</phase>
+            <goals>
+              <goal>upload</goal>
+            </goals>
+            <configuration>
+              <fromDir>${basedir}/src/main/schemas</fromDir>
+              <includes>*.xsd</includes>
+              <serverId>jomc.sourceforge.net</serverId>
+              <toDir>model</toDir>
+              <url>${jomc.artifacts.distribution.base.url}/standalone</url>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
     </plugins>
   </build>
   <dependencies>
@@ -210,36 +230,6 @@
           <scope>runtime</scope>
         </dependency>
       </dependencies>
-    </profile>
-    <profile>
-      <id>jomc-sourceforge-release</id>
-      <activation>
-        <activeByDefault>false</activeByDefault>
-      </activation>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>wagon-maven-plugin</artifactId>
-            <executions>
-              <execution>
-                <id>sourceforge-upload</id>
-                <phase>site-deploy</phase>
-                <goals>
-                  <goal>upload</goal>
-                </goals>
-                <configuration>
-                  <fromDir>${basedir}/src/main/schemas</fromDir>
-                  <includes>*.xsd</includes>
-                  <serverId>jomc.sourceforge.net</serverId>
-                  <toDir>model</toDir>
-                  <url>sftp://web.sourceforge.net/home/project-web/jomc/htdocs/standalone</url>
-                </configuration>
-              </execution>
-            </executions>
-          </plugin>
-        </plugins>
-      </build>
     </profile>
   </profiles>
 </project>
