--- a/pom.xml
+++ b/pom.xml
@@ -1072,7 +1072,8 @@
     <jomc.build.version>1.6</jomc.build.version>
     <jomc.base.version>1.0</jomc.base.version>
     <jomc.artifacts.url>http://jomc.sourceforge.net/jomc-standalone/${jomc.base.version}</jomc.artifacts.url>
-    <jomc.artifacts.distribution.url>scp://shell.sourceforge.net/home/project-web/jomc/htdocs/jomc-standalone/${jomc.base.version}</jomc.artifacts.distribution.url>
+    <jomc.artifacts.distribution.base.url>sftp://web.sourceforge.net/home/project-web/jomc/htdocs</jomc.artifacts.distribution.base.url>
+    <jomc.artifacts.distribution.url>${jomc.artifacts.distribution.base.url}/jomc-standalone/${jomc.base.version}</jomc.artifacts.distribution.url>
     <surefire.version>2.8.1</surefire.version>
     <emma-maven-plugin.version>1.0-alpha-3</emma-maven-plugin.version>
     <invoker.specification.version>1.0</invoker.specification.version>
