o Removed upload of XML schemas from 'jomc-sourceforge-release' profile to standard build plugins. o Updated site distribution URL to sfp://.
git-svn-id: http://svn.jomc.org/svnroot/jomc/jomc-standalone/trunk@3361 aee2edba-5628-49ba-b8b8-0e9d4ac63d57

--- a/jomc-standalone-model/pom.xml
+++ b/jomc-standalone-model/pom.xml
@@ -145,7 +145,7 @@
         <artifactId>wagon-maven-plugin</artifactId>
         <executions>
           <execution>
-            <id>sourceforge-upload</id>
+            <id>deploy-schema</id>
             <phase>site-deploy</phase>
             <goals>
               <goal>upload</goal>
